--- a/app/src/main/res/layout/fragment_braille.xml
+++ b/app/src/main/res/layout/fragment_braille.xml
@@ -1,14 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<androidx.constraintlayout.widget.ConstraintLayout-->
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.BrailleFragment">
+    android:background="@color/clubhouse"
+    android:visibility="visible">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/brailleTitle"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="64dp"
+        android:text="Braille"
+        android:textAlignment="textStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="20dp" />
 
-</FrameLayout>
+    <EditText
+        android:id="@+id/brailleEditText"
+        android:textColor="@color/black"
+        android:background="@drawable/rounded_corner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:gravity="top|left"
+        android:inputType="textMultiLine"
+        android:lines="5"
+        android:scrollHorizontally="false"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/brailleTitle" />
+
+    <TextView
+        android:id="@+id/brailleTextView"
+        android:textColor="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:alpha="0.5"
+        android:background="@drawable/rounded_corner"
+        android:textSize="24sp"
+        app:layout_constraintTop_toBottomOf="@id/brailleEditText"
+        tools:layout_editor_absoluteX="32dp" />
+
+    <Button
+        android:id="@+id/brailleCopy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="#00FFFFFF"
+        android:text="Copy"
+        android:textColor="#605E5E"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/brailleTextView" />
+</androidx.constraintlayout.widget.ConstraintLayout>
